# nonebot2.nix

./: .gitignore  README.md  flake.nix  pyproject.toml
nixos/: module.nix
pkgs/: runner-env.nix  runner.nix
src/generatedNoneBot/: bot.py  runner.py
