[project]
name = "generatedNoneBot"
version = "0.1.0"
description = "internal nonebot runner"
requires-python = ">=3.9, <4.0"
dependencies = [
  "nonebot-adapter-onebot>=2.4.6",
  "nonebot2[fastapi,websockets]>=2.4.1",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = []
builtin_plugins = []

[project.scripts]
run = "generatedNoneBot:runner.run"

[tool.uv]
package = true
